back to reliance on bash